Edit to initial card coloring and margins

--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
     />
   </head>
   <body>
-    <!-- <img
-      src="/Users/meganmarson/Pictures/wp2714490.webp"
-      ;
-      <!-- -->
-    <!-- <img
-      id="movieReelTop"
-      src="/Users/meganmarson/Pictures/vecteezy_filmstrip_36659392.svg"
-      alt="Movie Reel"
-    /> -->
-
     <header>
       <h1>Flick Finder</h1>
     </header>
@@ -32,17 +22,20 @@
         <button type="submit">Search</button>
       </form>
       <div id="movies" class="movie-container">
+        <div id="initialCard" class="card">
+          <div class="card-front">
+            <h2>Welcome to Flick Finder!</h2>
+            <br />
+            <br />
+            <p>Enter a movie title to begin your search.</p>
+          </div>
+        </div>
         <!-- Cards will be dynamically inserted here -->
       </div>
     </main>
     <footer>Created by: Megan Marson</footer>
-    <!-- <footer>
-      <img
-        id="movieReelBottom"
-        src="/Users/meganmarson/Pictures/vecteezy_filmstrip_36659392.svg"
-        alt="Movie Reel"
-      />
-    </footer> -->
+
     <script src="./JS/main.js"></script>
+    <img src="/Users/meganmarson/Pictures/Flik Pic.webp" id="flik" />
   </body>
 </html>
