Move Flik img to new file

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <footer>Created by: Megan Marson</footer>
 
     <script src="./JS/main.js"></script>
-    <img src="/Users/meganmarson/Pictures/Flik Pic.webp" id="flik" />
+    <img
+      src="/Users/meganmarson/Repos/Carolina Code School/omdb_lookup/JS/Screenshot 2024-07-31 at 10.44.33 AM.png"
+      id="flik"
+    />
   </body>
 </html>
